k8s-resources/cheat-confluence-jenkins/jenkins/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: jenkins
spec:
  rules:
    - host: {username}-jenkins.k8s-class.pelo.tech
      http:
        paths:
          - path: /
            backend:
              serviceName: jenkins
              servicePort: 80
